--- a/src/main/webapp/WEB-INF/views/thymeleaf/login.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Taller Web I</title>
-
+    <p>prueba</p>
     <!-- Boostrap core css -->
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
 
