--- a/src/main/webapp/WEB-INF/views/thymeleaf/login.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/login.html
@@ -6,6 +6,7 @@
 
     <title>Taller Web I</title>
     <p>prueba</p>
+    <p>prueba 2</p>
     <!-- Boostrap core css -->
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
 
