detalles en la vista login

--- a/src/main/webapp/WEB-INF/views/thymeleaf/login.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/login.html
@@ -38,10 +38,12 @@
                     <button class="login100-form-btn" Type="Submit">
                         Iniciar Sesion
                     </button>
+
                     <p th:if="${error != null}" class="alert alert-danger" th:text="'Error ' + ${error}">
                     </p>
                 </div>
-
+                <a href="#" class="register">Registrate</a>
+                <a href="#" class="olvidado">Olvidaste</a>
             </form>
         </div>
     </div>
