--- a/src/main/webapp/WEB-INF/views/thymeleaf/login.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/login.html
@@ -23,7 +23,7 @@
             <form class="login100-form validate-form p-b-33 p-t-5" action="#" th:action="@{/validar-login}" method="POST" th:object="${datosLogin}">
 
                 <div class="wrap-input100 validate-input" data-validate = "Enter username">
-                    <input class="input100" th:field="*{email}" id="email" type="email" placeholder="Contraseña" required/>
+                    <input class="input100" th:field="*{email}" id="email" type="email" placeholder="Email" required/>
                     <span class="focus-input100"></span>
 
                 </div>
