--- a/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
@@ -8,6 +8,27 @@
 <body>
 <a href="formulario-alta-resena.html" class="btn btn-primary">Agregar Reseña</a>
 
+<table border="1">
+    <thead>
+    <tr>
+        <th>Título</th>
+        <th>Contenido</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="resena : ${resenas}">
+        <td th:text="${resena.descripcion}"></td>
+        <td th:text="${resena.cantidadDeEstrellas}"></td>
+        <td>
+            <a th:href="@{'/borrarResena/' + ${resena.id}}" class="btn btn-danger">Borrar</a>
+        </td>
+    </tr>
+    </tbody>
+</table>
+
+<p th:if="${mensaje}" style="color: green;" th:text="${mensaje}"></p>
+<p th:if="${error}" style="color: red;" th:text="${error}"></p>
+
 
 <script type="text/javascript" th:src="@{webjars/bootstrap/5.2.0/js/bootstrap.min.js}"></script>
 </body>
