--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -16,16 +16,20 @@
 
 <body>
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="#">UNLAM</a>
-</nav>
+<div class="nav-container">
+    <nav class="navbar container navbar-light">
+        <div class="container-fluid">
+            <a class="navbar-brand">Taller Web 1</a>
+        </div>
+    </nav>
+</div>
+
 
 <main role="main" class="container">
-  <div class = "container">
-    <h1>Bienvenidos a Taller Web 1</h1>
 
-    <a href="login.html" class="btn btn-lg btn-primary btn-block">Volver</a>
-  </div>
+    <div class="my-5">
+      <h1 class="my-5">Bienvenidos a Taller Web 1</h1>
+    </div>
 </main>
 <!-- /.container -->
 
