ahora funciona el metodo para editar un apunte y se agrego un maquetado al home

--- a/src/main/webapp/WEB-INF/views/thymeleaf/apunteEliminado.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apunteEliminado.html
@@ -14,7 +14,7 @@
                 <h4 class="alert-heading">¡Apunte eliminado exitosamente!</h4>
                 <p>El apunte se ha eliminado correctamente de la base de datos.</p>
                 <hr>
-                <p class="mb-0">¿Deseas volver a la lista de apuntes? <a href="/lista-de-apuntes">Volver</a></p>
+                <p class="mb-0">¿Deseas volver a la lista de apuntes? <a th:href="@{'/misApuntes'}">Volver</a></p>
             </div>
         </div>
     </div>
