--- a/src/main/webapp/WEB-INF/views/thymeleaf/editarApunte.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/editarApunte.html
@@ -22,8 +22,9 @@
 
 <main role="main" class="container">
     <div class="container">
-        <h1>Formulario de Registro de Apunte</h1>
-        <form th:action="@{/subirApunte}" method="post" th:object="${datosApunte}" class="needs-validation" novalidate>
+        <h1>Formulario de Editar Apunte</h1>
+        <form th:action="@{/guardarEdicion}" method="post" th:object="${apunte}" class="needs-validation" novalidate>
+            <input type="hidden" th:field="*{id}" />
             <div class="form-group">
                 <label for="nombre">Nombre del Apunte:</label>
                 <input type="text" id="nombre" th:field="*{nombre}" class="form-control" required="required" />
