--- a/src/main/webapp/WEB-INF/views/thymeleaf/misApuntes.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/misApuntes.html
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="home.html">Inicio <span class="sr-only">(current)</span></a>
+                <a class="nav-link" th:href="@{'/home'}">Inicio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Mis Apuntes</a>
@@ -33,7 +33,7 @@
     </div>
 </nav>
 <div class="mx-auto my-2" style="width: 200px;">
-    <a th:action="@{/formulario-alta-apunte}" class="btn btn-success">Subir un apunte</a>
+    <a th:href="@{'/formulario-alta-apunte'}" class="btn btn-success">Subir un apunte</a>
 </div>
 <div class="container">
     <div class="row">
