la vista misApuntes ahora es dinamica y se modifico el encabezado

--- a/src/main/webapp/WEB-INF/views/thymeleaf/login.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/login.html
@@ -41,7 +41,7 @@
                     <p th:if="${error != null}" class="alert alert-danger" th:text="'Error ' + ${error}">
                     </p>
                 </div>
-                <a href="#" class="register">Registrate</a>
+                <a th:href="@{'/nuevo-usuario'}" class="register">Registrate</a>
                 <a href="#" class="olvidado">Olvidaste</a>
             </form>
         </div>
