--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -17,18 +17,19 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/}">Inicio</a>
+                <li class="nav-item active">
+                    <a class="nav-link" th:href="@{'/home'}">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/productos}">Productos</a>
+                    <a class="nav-link" th:href="@{'/misApuntes'}">Mis Apuntes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/ofertas}">Ofertas</a>
+                    <a class="nav-link" href="#">Puntos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/contacto}">Contacto</a>
+                    <a class="nav-link" th:href="@{'/miPerfil'}">Perfil</a>
                 </li>
+
             </ul>
         </div>
     </div>
