--- a/src/main/webapp/WEB-INF/views/thymeleaf/misApuntes.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/misApuntes.html
@@ -15,16 +15,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" th:href="@{'/home'}">Inicio <span class="sr-only">(current)</span></a>
+                <a class="nav-link" th:href="@{'/home'}">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Mis Apuntes</a>
+                <a class="nav-link" th:href="@{'/misApuntes'}">Mis Apuntes</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Puntos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="miPerfil.html">Perfil</a>
+                <a class="nav-link" th:href="@{'/miPerfil'}">Perfil</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -43,6 +43,7 @@
                     <h5 th:text="${apunte.nombre}" class="card-title"></h5>
                     <h6 class="card-subtitle mb-2 text-muted">Materia</h6>
                     <p th:text="${apunte.descripcion}" class="card-text" style="height: 6rem;"></p>
+                    <a th:href="@{/apunte-detalle}" class="btn btn-primary">Detalles</a>
                     <a th:href="@{/editarApunte/{id}(id=${apunte.id})}" class="btn btn-primary">Editar</a>
                     <a th:href="@{/eliminarApunte/{id}(id=${apunte.id})}" class="btn btn-danger">Eliminar</a>
                 </div>
