miPerfil muestra datos reales del usuario (nombre y email), entidad apunte se le puso atributo precio

--- a/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -99,6 +99,10 @@
         <hr class="colorgraph"><br>
 
         <div>
+          <p class="mailpss">Nombre</p>
+          <input th:field="*{nombre}" id="nombre" class="form-control" required/>
+        </div>
+        <div>
         <p class="mailpss">Email</p>
         <input th:field="*{email}" id="email" class="form-control" required/>
         </div>
