--- a/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
@@ -55,9 +55,9 @@
         <div>
             <button><img th:src="@{/img/Foto_Perfil_.jpg}" alt="Foto de perfil"></button>
         </div>
-        <div>
-            <p><strong>Nombre de usuario</strong></p>
-            <p>Email@Email.com</p>
+        <div th:if="${usuario != null}">
+            <p th:text="${usuario.getNombre()}"></p>
+            <p th:text="${usuario.getEmail()}"></p>
         </div>
     </div>
 
