mismo nav para todas las paginas

--- a/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
@@ -11,11 +11,7 @@
 
 </head>
 <body>
-<header>
-<nav class="navbar" style="background-color: #e3f2fd;">
-    <a>Unlam</a>
-</nav>
-</header>
+<div th:insert="~{nav}"></div>
 
 <style>
     .navbar-brand{
