--- a/src/main/webapp/WEB-INF/views/thymeleaf/altaApunte.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/altaApunte.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-
+<div th:insert="~{nav}"></div>
 <main role="main" class="container">
     <div class="container">
         <h1>Formulario de Registro de Apunte</h1>
