--- a/src/main/webapp/WEB-INF/views/thymeleaf/formulario-alta-resena.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/formulario-alta-resena.html
@@ -6,6 +6,7 @@
     <title>Title</title>
 </head>
 <body>
+<div th:insert="~{nav}"></div>
 <h1>Formulario de Reseña</h1>
 <form action="#" th:action="@{/guardarResena}" method="POST" th:object="${resena}">
 
