--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -8,32 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
-<!-- Barra de navegación de Bootstrap -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" href="#">Unlam</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{'/home'}">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{'/misApuntes'}">Mis Apuntes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Puntos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{'/miPerfil'}">Perfil</a>
-                </li>
-
-            </ul>
-        </div>
-    </div>
-</nav>
+    
+<div th:insert="~{nav}"></div>
 
 <main class="container">
     <!-- Sección de Destacados -->
