--- a/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -86,9 +86,7 @@
   }
 </style>
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="#">UNLAM</a>
-</nav>
+<div th:insert="~{nav}"></div>
 
 <main role="main" class="container">
 
