miPerfil muestra datos reales del usuario (nombre y email), entidad apunte se le puso atributo precio

--- a/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
@@ -56,8 +56,8 @@
             <button><img th:src="@{/img/Foto_Perfil_.jpg}" alt="Foto de perfil"></button>
         </div>
         <div th:if="${usuario != null}">
-            <p th:text="${usuario.getNombre()}"></p>
-            <p th:text="${usuario.getEmail()}"></p>
+            <p th:text="${usuario.nombre}"></p>
+            <p th:text="${usuario.email}"></p>
         </div>
     </div>
 
