--- a/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -94,7 +94,7 @@
 
   <div class = "container">
     <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-      <form action="#" th:action="@{/registrarme}" method="POST" th:object="${usuario}">
+      <form action="#" th:action="@{/registrarme}" method="POST" th:object="${usuario}" accept-charset="UTF-8">
         <h3>Crear cuenta</h3>
         <hr class="colorgraph"><br>
         <p class="mailpss">Nombre</p>
@@ -104,11 +104,6 @@
         <p class="mailpss">Apellido</p>
         <input th:field="*{apellido}" id="apellido" class="form-control" required/>
         <span th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></span>
-
-        <div>
-          <p class="mailpss">Nombre</p>
-          <input th:field="*{nombre}" id="nombre" class="form-control" required/>
-        </div>
         <div>
         <p class="mailpss">Email</p>
         <input th:field="*{email}" id="email" class="form-control" required/>
