Usuario al subir reseña se le dan 10 puntos con su respectivo test

--- a/src/main/webapp/WEB-INF/views/thymeleaf/formulario-alta-resena.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/formulario-alta-resena.html
@@ -24,6 +24,7 @@
 
 
     <input type="submit" value="Guardar Reseña">
+    <input type="hidden" id="usuarioId" name="usuarioId" th:value="${usuario.id}" />
 </form>
 
 <script type="text/javascript" th:src="@{webjars/bootstrap/5.2.0/js/bootstrap.min.js}"></script>
