--- a/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -7,123 +7,64 @@
 
   <title>Taller Web I</title>
 
-  <!-- Boostrap core css -->
-  <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css">
 
-  <!-- custom style -->
+  <!-- Custom styles -->
   <link rel="stylesheet" th:href="@{/css/main.css}"/>
-
-  <script type="text/javascript" src="../../../resources/core/js/nuevo-usuario.js"></script>
-
 </head>
-
 <body>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <form action="#" th:action="@{/registrarme}" method="POST" th:object="${datosRegistro}" accept-charset="UTF-8"
+            enctype="multipart/form-data">
+        <h3 class="text-center mt-5">Crear cuenta</h3>
+        <hr class="my-4">
 
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-
-  .container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
-  }
-
-  h1 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-
-  .form-group {
-    margin-bottom: 15px;
-  }
-
-  label {
-    display: block;
-    margin-bottom: 5px;
-  }
-
-  input[type="email"],
-  input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-  }
-
-  button {
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-
-  a {
-    text-decoration: none;
-    color: #007bff;
-  }
-
-  a:hover {
-    text-decoration: underline;
-  }
-  .mailpss{
-    margin-bottom: 5px;
-    margin-top: 10px;
-  }
-</style>
-
-<div th:insert="~{nav}"></div>
-
-<main role="main" class="container">
-
-  <div class = "container">
-    <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-      <form action="#" th:action="@{/registrarme}" method="POST" th:object="${usuario}" accept-charset="UTF-8">
-        <h3>Crear cuenta</h3>
-        <hr class="colorgraph"><br>
-        <p class="mailpss">Nombre</p>
-        <input th:field="*{nombre}" id="nombre" class="form-control" required/>
-        <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></span>
-
-        <p class="mailpss">Apellido</p>
-        <input th:field="*{apellido}" id="apellido" class="form-control" required/>
-        <span th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></span>
-        <div>
-        <p class="mailpss">Email</p>
-        <input th:field="*{email}" id="email" class="form-control" required/>
-          <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
+        <div class="mb-3">
+          <label for="nombre" class="form-label">Nombre</label>
+          <input th:field="*{nombre}" id="nombre" class="form-control" placeholder="Escribe tu nombre" required/>
+          <div th:if="${#fields.hasErrors('nombre')}" class="text-danger">
+            <p th:errors="*{nombre}"></p>
+          </div>
         </div>
-        <div>
-        <p class="mailpss">Contraseña</p>
-        <input th:field="*{password}" type="password" id="password" class="form-control" required/>
-          <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
+        <div class="mb-3">
+          <label for="apellido" class="form-label">Apellido</label>
+          <input th:field="*{apellido}" id="apellido" class="form-control" placeholder="Escribe tu apellido" required/>
+          <div th:if="${#fields.hasErrors('apellido')}" class="text-danger">
+            <p th:errors="*{apellido}"></p>
+          </div>
         </div>
-        <button id="btn-registrarme" Type="Submit">Registrarme</button>
-        <p th:if="${error != null}" class="alert alert-danger" th:text="'Error ' + ${error}">
-        </p>
+        <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+          <input th:field="*{email}" id="email" class="form-control" placeholder="Escribe tu correo" required/>
+          <div th:if="${#fields.hasErrors('email')}" class="text-danger">
+            <p th:errors="*{email}"></p>
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">Contraseña</label>
+          <input th:field="*{password}" type="password" id="password" class="form-control"
+                 placeholder="Escribe tu contraseña" required/>
+          <div th:if="${#fields.hasErrors('password')}" class="text-danger">
+            <p th:errors="*{password}"></p>
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="fotoPerfil" class="form-label">Foto de Perfil</label>
+          <input name="fotoPerfil" type="file" id="fotoPerfil" class="form-control" accept="image/*" required/>
+          <div th:if="${#fields.hasErrors('fotoPerfil')}" class="text-danger">
+            <p th:errors="*{fotoPerfil}"></p>
+          </div>
+        </div>
+        <button id="btn-registrarme" type="Submit" class="btn btn-primary btn-block mt-4">Registrarme</button>
+        <div th:if="${error != null}" class="alert alert-danger mt-3">
+          <p th:text="'Error: ' + ${error}"></p>
+        </div>
       </form>
-
     </div>
   </div>
-
-</main>
-<!-- /.container -->
-
-<!-- Boostrap core js -->
-<script type="text/javascript" th:src="@{webjars/bootstrap/5.2.0/js/bootstrap.min.js}"></script>
+</div>
 </body>
 </html>
