--- a/src/main/webapp/WEB-INF/views/thymeleaf/formulario-alta-resena.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/formulario-alta-resena.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 <div th:insert="~{nav}"></div>
+<div th:if="${mensaje}" class="alert alert-danger">
+    <p th:text="${mensaje}"></p>
+</div>
 <h1>Formulario de Reseña</h1>
 <form action="#" th:action="@{/guardarResena}" method="POST" th:object="${resena}">
 
@@ -24,7 +27,7 @@
 
 
     <input type="submit" value="Guardar Reseña">
-    <input type="hidden" id="usuarioId" name="usuarioId" th:value="${usuario.id}" />
+
 </form>
 
 <script type="text/javascript" th:src="@{webjars/bootstrap/5.2.0/js/bootstrap.min.js}"></script>
