--- a/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
@@ -49,7 +49,8 @@
 <main>
     <div class="nombreYFoto">
         <div>
-            <button><img th:src="@{/img/Foto_Perfil_.jpg}" alt="Foto de perfil"></button>
+            <button> <img th:src="@{'/img/' + ${usuario.fotoPerfil}}" alt="Foto de perfil"></button>
+
         </div>
         <div th:if="${usuario != null}">
             <p th:text="${usuario.nombre}"></p>
