--- a/src/main/webapp/WEB-INF/views/thymeleaf/nav.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/nav.html
@@ -19,6 +19,9 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{'/miPerfil'}">Perfil</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{'/apuntes'}">Apuntes</a>
+                </li>
 
             </ul>
         </div>
