--- a/src/main/webapp/WEB-INF/views/thymeleaf/misApuntes.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/misApuntes.html
@@ -23,6 +23,7 @@
                     <a th:href="@{/detalleApunte/{id}(id=${apunte.id})}" class="btn btn-primary">Detalles</a>
                     <a th:href="@{/editarApunte/{id}(id=${apunte.id})}" class="btn btn-primary">Editar</a>
                     <a th:href="@{/eliminarApunte/{id}(id=${apunte.id})}" class="btn btn-danger">Eliminar</a>
+                    <p th:text="${apunte.precio}" class="card-text" style="height: 6rem;"></p>
                 </div>
             </div>
         </div>
