--- a/src/main/webapp/WEB-INF/views/thymeleaf/misApuntes.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/misApuntes.html
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Mis Apuntes</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-
+<!DOCTYPE html></head>
 <div th:insert="~{nav}"></div>
-
+<body>
 <div class="mx-auto my-2" style="width: 200px;">
     <a th:href="@{'/formulario-alta-apunte'}" class="btn btn-success">Subir un apunte</a>
 </div>
@@ -30,4 +22,3 @@
     </div>
 </div>
 </body>
-</html>
