--- a/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<div th:insert="~{nav}"></div>
 <body>
-    <div th:insert="~{nav}"></div>
     <main class="container">
         <a th:href="@{'/formulario-alta-resena'}" class="btn btn-primary">Agregar Reseña</a>
         <p th:text="${apunte.nombre}"></p>
@@ -32,9 +26,5 @@
         
         <p th:if="${mensaje}" style="color: green;" th:text="${mensaje}"></p>
         <p th:if="${error}" style="color: red;" th:text="${error}"></p>
-
-<script type="text/javascript" th:src="@{webjars/bootstrap/5.2.0/js/bootstrap.min.js}"></script>
-
-
+    </main>
 </body>
-</html>
