Se le dan 100 puntos al usuario cuando tiene al menos 5 reseñas en su apunte que en promedio den 4.5 estrellas o mas y el home muestra los apuntes con mejores calificaciones

--- a/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
@@ -2,7 +2,7 @@
 <div th:insert="~{nav}"></div>
 <body>
     <main class="container">
-        <a th:href="@{'/formulario-alta-resena'}" class="btn btn-primary">Agregar Reseña</a>
+        <a th:if="${tipoDeAcceso.LEER}" th:href="@{'/formulario-alta-resena'}" class="btn btn-primary">Agregar Reseña</a>
         <p th:text="${apunte.nombre}"></p>
         <p th:text="${apunte.descripcion}"></p>
         <p th:text="${apunte.pathArchivo}"></p>
