--- a/src/main/webapp/WEB-INF/views/thymeleaf/detalleApunte.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/detalleApunte.html
@@ -30,7 +30,7 @@
             </div>
           </div>
         </div>
-        <a th:href="@{/formulario-alta-resena}" class="btn btn-primary my-3">Agregar Reseña</a>       
+        <a th:href="@{/formulario-alta-resena}" class="btn btn-primary my-3">Aagregar Reseña</a>
         <p th:if="${mensaje}" style="color: green;" th:text="${mensaje}"></p>
         <p th:if="${error}" style="color: red;" th:text="${error}"></p>
 
