--- a/src/main/webapp/WEB-INF/views/thymeleaf/nav.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/nav.html
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="#">Puntos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{'/apuntes'}">Apuntes</a>
+                    <a class="nav-link" th:href="@{'/apuntesEnVenta'}">Apuntes</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
