--- a/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -21,6 +21,15 @@
     <script th:src="@{/js/nuevo-usuario.js}"></script>
 
 </head>
+<style>
+
+  #map {
+    width: 100%;
+    height: 250PX;
+  }
+</style>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKsOyLppGoYEHhTvwny8xDgKj96ZzSIFU&libraries=places&callback=initAutocomplete"
+        async defer></script>
 <body>
 <div class="container">
   <div class="row justify-content-center">
@@ -59,6 +68,27 @@
             <p th:errors="*{password}"></p>
           </div>
         </div>
+
+        <div class="mb-3">
+          <label for="autocomplete" class="form-label">Dirección</label>
+          <input class="form-control"
+                 id="autocomplete" name="autocomplete"
+                 placeholder="Ingrese su dirección"
+
+                 onFocus="geolocate()" type="text" required/>
+
+          <input th:field="*{latitud} "type="hidden" id="latitud" class="form-control" value="">
+          <input th:field="*{longitud} "type="hidden" id="longitud" class="form-control" value="">
+
+          <div th:if="${#fields.hasErrors('latitud')}" class="text-danger">
+            <p th:errors="*{latitud}"></p>
+          </div>
+        </div>
+
+        <div class="mb-3">
+          <div id="map"></div>
+        </div>
+
         <div class="mb-3">
           <label for="fotoPerfil" class="form-label">Foto de Perfil</label>
           <input name="fotoPerfil" type="file" id="fotoPerfil" class="form-control" accept="image/*" required/>
@@ -76,3 +106,92 @@
 </div>
 </body>
 </html>
+<script>
+  var placeSearch, autocomplete;
+  //inicializa el mapa con una direccion
+  //al input del autocomplete le da la funcion de filtrar y desplegar sugerencias
+  function initAutocomplete() {
+    var map = new google.maps.Map(document.getElementById('map'), {
+      center: {lat: -34.607034, lng: -58.375516},
+      zoom: 14,
+      mapTypeId: 'roadmap'
+    });
+
+    autocomplete = new google.maps.places.Autocomplete(
+            /** @type {!HTMLInputElement} */
+            (document.getElementById('autocomplete')), {
+              types: ['geocode']
+            });
+    autocomplete.addListener('place_changed', rellenarDireaccion);
+  }
+
+  function rellenarDireaccion() {
+    var map = new google.maps.Map(document.getElementById('map'), {
+      center: {lat: -34.607034, lng: -58.375516},
+      zoom: 14,
+      mapTypeId: 'roadmap'
+    });
+
+    // Obtén los detalles del lugar desde el objeto de autocompletado.
+    var place = autocomplete.getPlace();
+    // Verificar si no se obtuvo una latitud y longitud
+    if (place == null || !place.geometry || !place.geometry.location) {
+      document.getElementById('latitud').value = '';
+      document.getElementById('longitud').value = '';
+
+      return;
+    }
+
+    var marker = new google.maps.Marker({
+      position: place.geometry.location,
+      map: map,
+      title: place.name
+    });
+    marker.setMap(map);
+    //configura la el cuadrado/vista del mapa
+    var bounds = new google.maps.LatLngBounds();
+    if (place.geometry.viewport) {
+      // Only geocodes have viewport.
+      bounds.union(place.geometry.viewport);
+    } else {
+      bounds.extend(place.geometry.location);
+    }
+
+    map.fitBounds(bounds);
+    // Obtener cada componente de la dirección desde los detalles
+    // del lugar y llenar el campo correspondiente en el formulario.
+    var country = "";
+    for (var i = 0; i < place.address_components.length; i++) {
+      var addressType = place.address_components[i].types[0];
+      if (addressType === "country") {
+        country = place.address_components[i].long_name;
+        break;
+      }
+    }
+
+    var latitud = place.geometry.location.lat();
+    var longitud = place.geometry.location.lng();
+
+    document.getElementById('latitud').value = latitud;
+    document.getElementById('longitud').value = longitud;
+  }
+
+
+  // Ajusta el objeto de autocompletado a la ubicación geográfica del usuario,
+  // según lo proporcionado por el objeto 'navigator.geolocation' del navegador.
+  function geolocate() {
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(function (position) {
+        var geolocation = {
+          lat: position.coords.latitude,
+          lng: position.coords.longitude
+        };
+        var circle = new google.maps.Circle({
+          center: geolocation,
+          radius: position.coords.accuracy
+        });
+        autocomplete.setBounds(circle.getBounds());
+      });
+    }
+  }
+</script>
