--- a/src/main/webapp/WEB-INF/views/thymeleaf/editarApunte.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/editarApunte.html
@@ -21,9 +21,14 @@
                     <input type="text" id="archivo" th:field="*{pathArchivo}" class="form-control" required="required" />
                 </div>
 
+                <div class="form-group">
+                    <label for="precio">Precio:</label>
+                    <input type="text" id="precio" th:field="*{precio}" class="form-control" required="required" />
+                </div>
+
                 <div th:if="${error}" class="error-message" th:text="${error}"></div>
 
-                <button type="submit" class="btn btn-primary">Registrar Apunte</button>
+                <button type="submit" class="btn btn-primary">Editar Apunte</button>
             </form>
         </div>
     </main>
