--- a/src/main/webapp/WEB-INF/views/thymeleaf/nav.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/nav.html
@@ -40,9 +40,12 @@
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
+                <li class="nav-item mr-2">
+                    <p>Puntos disponibles <span class="fs-4" th:text="${session.usuario.puntos}"></span></p>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      NombreUsuario
+                        <span th:text="${session.usuario.nombre}"></span>
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" th:href="@{'/miPerfil'}">Perfil</a></li>
